item table container setup

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <script src="js/factories/cart.factory.js"></script>
 </head>
 <body ng-app="app">
+  <div class="container">
   <!-- nav -->
 
     <div ng-view></div>
-
+    
+  </div>
 </body>
 </html>
