--- a/index.html
+++ b/index.html
@@ -12,15 +12,33 @@
   <script src="js/app.js"></script>
   <script src="js/controllers/items.controller.js"></script>
   <script src="js/controllers/cart.controller.js"></script>
+  <script src="js/controllers/nav.controller.js"></script>
   <script src="js/factories/items.factory.js"></script>
   <script src="js/factories/cart.factory.js"></script>
 </head>
 <body ng-app="app">
   <div class="container">
+    <nav class="navbar navbar-default" ng-controller="Nav">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mobile-nav" aria-expanded="false">
+             <span class="sr-only">Toggle navigation</span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+          </button>
+          <a href="#/" class="navbar-brand">Tea</a>
+        </div>
+
+        <div class="navbar navbar-right">
+          <a class="btn btn-success pull-right" ng-href="/#/cart">Checkout: {{ nav.cartTotal() }}</a>
+        </div>
+      </div>
+    </nav>
   <!-- nav -->
 
     <div ng-view></div>
-    
+
   </div>
 </body>
 </html>
