--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>Angular Shopping Cart</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/gauge.css">
+
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
@@ -15,6 +17,7 @@
   <script src="js/controllers/nav.controller.js"></script>
   <script src="js/factories/items.factory.js"></script>
   <script src="js/factories/cart.factory.js"></script>
+  <script src="js/directives/caffeine-meter.directive.js"></script>
 </head>
 <body ng-app="app">
   <div class="container">
