--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular Shopping Cart</title>
+  <title>Angular Tea</title>
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.css">
   <link rel="stylesheet" href="css/gauge.css">
-
+  <link rel="stylesheet" href="css/custom.css">
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
@@ -20,28 +24,21 @@
   <script src="js/directives/caffeine-meter.directive.js"></script>
 </head>
 <body ng-app="app">
-  <div class="container">
-    <nav class="navbar navbar-default" ng-controller="Nav">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mobile-nav" aria-expanded="false">
-             <span class="sr-only">Toggle navigation</span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-          </button>
-          <a href="#/" class="navbar-brand">Tea</a>
-        </div>
-
-        <div class="navbar navbar-right">
-          <a class="btn btn-success pull-right" ng-href="/#/cart">Checkout: {{ nav.cartTotal() }}</a>
-        </div>
+  <nav class="navbar navbar-warning ngTea-navbar" ng-controller="Nav">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="#/" class="navbar-brand">Angular Tea</a>
       </div>
-    </nav>
+
+      <div class="navbar-right">
+        <a class="btn btn-default btn-raised" ng-href="/#/cart"><span class="glyphicon glyphicon-shopping-cart"></span> {{ nav.cartTotal() }}</a>
+      </div>
+    </div>
+  </nav>
+
   <!-- nav -->
-
+  <div class="container">
     <div ng-view></div>
-
   </div>
 </body>
 </html>
